--- a/public/map.html
+++ b/public/map.html
@@ -9,6 +9,7 @@
     body {
       margin: 0;
       font-family: "Noto Sans KR", sans-serif;
+      background: #f7f9fc;
     }
     header {
       background: #007bff;
@@ -32,8 +33,8 @@
       background: #fff;
       border-top-left-radius: 16px;
       border-top-right-radius: 16px;
-      box-shadow: 0 -2px 15px rgba(0,0,0,0.25);
-      max-height: 65vh;
+      box-shadow: 0 -2px 15px rgba(0, 0, 0, 0.25);
+      max-height: 60vh;
       overflow-y: auto;
       transform: translateY(100%);
       transition: transform 0.4s ease;
@@ -49,34 +50,26 @@
       color: #333;
     }
     .delivery-item {
-      padding: 10px 15px;
+      padding: 12px 18px;
       border-bottom: 1px solid #eee;
+    }
+    .delivery-item p {
+      margin: 3px 0;
     }
     .delivery-item button {
       background: #007bff;
       color: white;
       border: none;
-      padding: 6px 10px;
+      padding: 8px 12px;
       border-radius: 8px;
       cursor: pointer;
       font-size: 0.9rem;
       margin-top: 6px;
     }
-    .close-btn {
-      display: block;
-      margin: 10px auto;
-      padding: 8px 15px;
-      background: #ff4757;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    /* 내 위치 파란 점 */
     .my-location-dot {
       width: 12px;
       height: 12px;
-      background: rgba(0,123,255,0.9);
+      background: rgba(0, 123, 255, 0.9);
       border-radius: 50%;
       border: 2px solid white;
     }
@@ -90,7 +83,6 @@
   <div id="customerCard">
     <div class="card-header">고객 배송 정보</div>
     <div id="card-content"></div>
-    <button class="close-btn" onclick="closeCard()">닫기</button>
   </div>
 
   <script>
@@ -98,13 +90,13 @@
     const mapContainer = document.getElementById("map");
     const mapOption = {
       center: new kakao.maps.LatLng(37.4981, 127.0276),
-      level: 5
+      level: 4
     };
     const map = new kakao.maps.Map(mapContainer, mapOption);
 
     let myPosition = null;
 
-    // ✅ 내 위치 실시간 추적 (파란 점)
+    // ✅ 내 위치 실시간 표시 (파란 점)
     if (navigator.geolocation) {
       navigator.geolocation.watchPosition(
         (pos) => {
@@ -126,103 +118,68 @@
       );
     }
 
-    // ✅ 배송지 데이터 (운송장번호 포함)
+    // ✅ 테스트용 동일 건물 내 여러 박스(운송장 중복)
     const deliveries = [
       { id: "A001", name: "김지훈", phone: "010-1111-2222", address: "서울특별시 강남구 테헤란로 123 (101동 1502호)", lat: 37.4981, lng: 127.0276 },
-      { id: "A002", name: "박은지", phone: "010-3333-4444", address: "서울특별시 강남구 테헤란로 456 (103동 502호)", lat: 37.4990, lng: 127.0350 },
-      { id: "A003", name: "최성민", phone: "010-5555-6666", address: "서울특별시 송파구 올림픽로 25 (204동 1101호)", lat: 37.5145, lng: 127.1056 },
-      { id: "A004", name: "이수빈", phone: "010-7777-8888", address: "서울특별시 서초구 서초대로 88 (303동 401호)", lat: 37.4928, lng: 127.0110 },
-      { id: "A005", name: "정다혜", phone: "010-1212-3434", address: "서울특별시 강남구 학동로 77 (301동 702호)", lat: 37.5180, lng: 127.0280 },
-      { id: "A006", name: "조현우", phone: "010-9090-8080", address: "서울특별시 강동구 천호대로 223 (103동 1203호)", lat: 37.5380, lng: 127.1230 }
+      { id: "A002", name: "김지훈", phone: "010-1111-2222", address: "서울특별시 강남구 테헤란로 123 (101동 1502호)", lat: 37.4981, lng: 127.0276 },
+      { id: "A003", name: "김지훈", phone: "010-1111-2222", address: "서울특별시 강남구 테헤란로 123 (101동 1502호)", lat: 37.4981, lng: 127.0276 },
+      { id: "A004", name: "박은지", phone: "010-3333-4444", address: "서울특별시 강남구 테헤란로 456 (103동 502호)", lat: 37.4990, lng: 127.0350 },
+      { id: "A005", name: "최성민", phone: "010-5555-6666", address: "서울특별시 서초구 서초대로 88 (303동 401호)", lat: 37.4928, lng: 127.0110 }
     ];
 
-    // ✅ 거리 계산 함수 (Haversine)
-    function calcDistance(lat1, lng1, lat2, lng2) {
-      const R = 6371;
-      const dLat = (lat2 - lat1) * Math.PI / 180;
-      const dLng = (lng2 - lng1) * Math.PI / 180;
-      const a =
-        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-        Math.cos(lat1 * Math.PI / 180) *
-        Math.cos(lat2 * Math.PI / 180) *
-        Math.sin(dLng / 2) *
-        Math.sin(dLng / 2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-      return R * c;
-    }
+    // ✅ 동일 주소지 병합
+    const grouped = deliveries.reduce((acc, d) => {
+      const key = d.address;
+      if (!acc[key]) acc[key] = [];
+      acc[key].push(d);
+      return acc;
+    }, {});
 
-    // ✅ AI 경로 자동 정렬 (내 위치 기준)
-    function sortDeliveries() {
-      if (!myPosition) return deliveries;
-      return deliveries
-        .map(d => ({
-          ...d,
-          dist: calcDistance(myPosition.getLat(), myPosition.getLng(), d.lat, d.lng)
-        }))
-        .sort((a, b) => a.dist - b.dist);
-    }
+    // ✅ 마커 표시
+    for (const [addr, group] of Object.entries(grouped)) {
+      const { lat, lng } = group[0];
+      const marker = new kakao.maps.Marker({
+        position: new kakao.maps.LatLng(lat, lng),
+        map: map
+      });
 
-    // ✅ 지도에 마커 표시
-    function drawMarkers() {
-      const sorted = sortDeliveries();
-      sorted.forEach((d, index) => {
-        const marker = new kakao.maps.Marker({
-          position: new kakao.maps.LatLng(d.lat, d.lng),
-          map: map
-        });
-
-        kakao.maps.event.addListener(marker, "click", () => {
-          showCustomerCard(d, index + 1);
-        });
+      kakao.maps.event.addListener(marker, "click", () => {
+        showCustomerCard(addr, group);
       });
     }
 
     // ✅ 고객카드 표시
-    function showCustomerCard(data, order) {
+    function showCustomerCard(address, group) {
       const card = document.getElementById("customerCard");
       const content = document.getElementById("card-content");
       content.innerHTML = `
         <div style="text-align:center;">
-          <h3>📦 ${order}번째 배송지</h3>
-          <p><b>운송장번호:</b> ${data.id}</p>
-          <p><b>이름:</b> ${data.name}</p>
-          <p><b>전화번호:</b> ${data.phone}</p>
-          <p><b>주소:</b> ${data.address}</p>
-          <button onclick="capturePhoto('${data.id}', '${data.address}')">📸 사진촬영 및 전송</button>
-          <button onclick="completeDelivery('${data.id}')">✅ 배송완료</button>
+          <h3>🏢 ${address}</h3>
+          <p><b>수령인:</b> ${group[0].name}</p>
+          <p><b>전화번호:</b> ${group[0].phone}</p>
+          <p><b>박스 수량:</b> ${group.length}개</p>
+          <p><b>운송장:</b> ${group.map(d => d.id).join(", ")}</p>
+          <button onclick="capturePhoto('${address}', '${group.map(d => d.id).join(', ')}', ${group.length})">📸 사진촬영 및 전송</button>
         </div>
       `;
       card.classList.add("active");
     }
 
-    // ✅ 사진촬영(모바일 카메라 호출)
-    function capturePhoto(id, addr) {
+    // ✅ 사진촬영 기능 (모바일 카메라)
+    function capturePhoto(address, ids, boxCount) {
       const input = document.createElement("input");
       input.type = "file";
       input.accept = "image/*";
-      input.capture = "environment"; // 후면 카메라
+      input.capture = "environment";
       input.onchange = (e) => {
         const file = e.target.files[0];
         if (file) {
-          alert(`📸 ${id} 사진 업로드 완료 (${addr})`);
+          alert(`📸 ${address}\n운송장: ${ids}\n박스 ${boxCount}개 전송 완료!`);
+          document.getElementById("customerCard").classList.remove("active");
         }
       };
       input.click();
     }
-
-    // ✅ 배송완료
-    function completeDelivery(id) {
-      alert(`✅ 운송장 ${id} 배송완료!`);
-      closeCard();
-    }
-
-    // ✅ 닫기
-    function closeCard() {
-      document.getElementById("customerCard").classList.remove("active");
-    }
-
-    // ✅ 실행
-    setTimeout(drawMarkers, 1500); // 내위치 확보 후 마커 표시
   </script>
 </body>
 </html>
